Add placeholder for sparql()